HBASE-28917 ColumnFamilyMismatchException mixes IA public and private (#6369)
Co-authored-by: Hernan Gelaf-Romer <hgelafromer@hubspot.com>
Signed-off-by: Ray Mattingly <rmattingly@apache.org>